<resources>
    <string name="app_name">Padmashali</string>
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Urban+Tech+Services</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="facebook_app_id">xxxxxxxxxxxxx</string>
    <string name="fb_login_protocol_scheme">fbxxxxxxxxxxxxx</string>
    <string name="privacy_policy_url">http://padmashaly.com</string>
    <string name="scheme">https</string>
    <string name="host">padmashaly.com</string>
    <string name="pathPrefix">/testing/http://padmashaly.com/</string>
    <string name="get_scheme">news</string>
    <string name="get_host">http://padmashaly.com</string>
    <string name="get_pathPrefix">/</string>
    <string name="isRTL">false</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="skip">Skip</string>
    <string name="ckbox_rem_me">Remember Me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="dnt_have_acc">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_register">Register</string>
    <string name="already_acc">Already have an account?</string>
    <string name="action_regis_short">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="comments">Comments</string>
    <string name="menu_tv">Live Channel</string>
    <string name="search">Search</string>
    <string name="err_internet_not_conn">Internet not connected</string>
    <string name="loading">Loading..</string>
    <string name="no_cat_found">No Categories Found</string>
    <string name="cpassword">Confirm Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_cpassword">Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="registering">Registering..</string>
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="submit">Submit</string>
    <string name="email_empty">Email is Empty</string>
    <string name="latest">Latest</string>
    <string name="categories">Categories</string>
    <string name="services">Upcoming Services</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="moreapp">More App</string>
    <string name="aboutus">About Us</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="err_server_no_conn">Error, Server not connected</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successfully</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="home">Home</string>
    <string name="not_log">Not Logged In</string>
    <string name="password">Password</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="updating">Updating..</string>
    <string name="update_prof_succ">Profile Updated Successfully</string>
    <string name="update_prof_not_succ">Cannot update Profile</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="author">Author</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="no_item_found">No Items Found</string>
    <string name="install_yt">Please install youtube app and try again</string>
    <string name="share_news">Share Posts</string>
    <string name="no_data_found">No data found from web</string>
    <string name="developed_by">Developed By:</string>
    <string name="trending_hash">#Trending Posts</string>
    <string name="expand">Expand</string>
    <string name="add_comment">Add Comment</string>
    <string name="latest_news">Latest Posts</string>
    <string name="top_stories">Top Stories</string>
    <string name="load_comment">Loading Comment</string>
    <string name="no_comment">No Comments</string>
    <string name="conn_net_post_comment">Please connect internet and post comment</string>
    <string name="enter_comment">Please enter comment</string>
    <string name="no_user_found">No User Found</string>
    <string name="cannot_use_save_permission">Cannot use save feature without requested permission</string>
    <string name="comm_posted">Comment Posted</string>
    <string name="version">Version</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="settings">Settings</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="try_again">Try Again</string>
    <string name="no_news_found">No Posts Found</string>
    <string name="view_all">View All</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="write_comment">Write a comment</string>
    <string name="reload">Reload</string>
    <string name="select_categories">Select Categories</string>
    <string name="next">Next</string>
    <string name="msg_selct_cat">Select categories below to see the latest Posts of your choice</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="save">Save</string>
    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="image">Image</string>
    <string name="send">Send</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="register">Register</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="exit">Exit</string>
    <string name="invalid_user">Invalid User</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>
    <string name="select_image">Select Image</string>
    <string name="trending_news">Trending Posts</string>
    <string name="leave_comments">Leave your comments</string>
    <string name="video_news">Video Post</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clearing_cache">Clearing Cache</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="report">Report</string>
    <string name="report_news">Report Post :-</string>
    <string name="report_message">Enter Your Report Details</string>
    <string name="enter_report">Please enter your report details</string>
    <string name="delete">Delete</string>
    <string name="comment_old">Comment Old</string>
    <string name="ok">OK</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="share_message">For more latest Post download</string>
    <string name="login_google">Login with Google</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="err_login_goole">Error while login with google</string>
    <string name="email_already_regis">Email Already Registered</string>
    <string name="err_connect_net_try">Please connect to internet and try again</string>
    <string name="login_success">Login Successful</string>
    <string name="category">Category</string>
    <string name="news_title">Post Title</string>
    <string name="news_type">Post Type</string>
    <string name="video_url">Video URL</string>
    <string name="add_featured_image">+Add Featured Image</string>
    <string name="recommended_size">Recommended Size 800x600, 600x400</string>
    <string name="enter_news_title">Enter Post Title</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_url">Enter URL</string>
    <string name="select_news_image">Select Post Image</string>
    <string name="upload_success_message">Your quote is uploaded successfully, it will appear in app once admin approves it.</string>
    <string name="upload_success">Upload Successful</string>
    <string name="upload_video">Upload Video</string>
    <string name="add_gallery_images">Add Gallery Images</string>
    <string name="upload_more">Upload More</string>
    <string name="date">Date</string>
    <string name="select_1_cat">Select atleast 1 category</string>
    <string name="applied_reporter">Applied for Reporter</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="related_news">Related Posts</string>
    <string name="edit_news">Edit Post</string>
    <string name="sure_delete_uploaded_image">Are you sure you want to delete uploaded image?</string>
    <string name="add_news">Add Post</string>
    <string name="hello">Hello</string>
    <string name="approved">Approved</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="read_terms">"I have read and agreed to the "</string>
    <string name="accept_terms">Read and accept Terms of Use to continue</string>
    <string name="add_user">Add User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_news">Upload Post</string>
    <string name="survey">Survey</string>
    <string name="surname">Surname</string>
    <string name="fathername">Father name</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="housenumber">House Number</string>
    <string name="wardnumber">Ward Number</string>
    <string name="city">City</string>
    <string name="mandal">Mandal</string>
    <string name="district">District</string>
    <string name="qualification">Qualification</string>
    <string name="occupation">Occupation</string>
    <string name="no_survey_details">No Survey Details</string>
    <string name="no_membership_details">No MemberShip Details</string>
    <string name="feedback">Feedback</string>
    <string name="caste">Caste</string>
    <string name="id_card">ID Card</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="male">Male</string>
    <string name="married">Married</string>
</resources>