<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SurveyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_survey"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:title="@string/survey"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_newsdetails1"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="3dp"
                            app:cardCornerRadius="5dp"
                            android:layout_margin="3dp"
                            app:cardUseCompatPadding="true"
                            android:layout_weight="0.5">
                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/survey_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@android:color/transparent"
                                    android:hint="@string/name"
                                    android:inputType="text"
                                    android:padding="10dp"
                                    android:textColor="@color/black"/>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="3dp"
                            app:cardCornerRadius="5dp"
                            android:layout_margin="3dp"
                            app:cardUseCompatPadding="true"
                            android:layout_weight="0.5">
                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/survey_surname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/surname"
                                android:inputType="text" android:padding="10dp"
                                android:textColor="@color/black"/>
                            </androidx.cardview.widget.CardView>
                    </LinearLayout>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/survey_fathername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/fathername"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="3dp"
                            app:cardCornerRadius="5dp"
                            android:layout_margin="3dp"
                            app:cardUseCompatPadding="true"
                            android:layout_weight="0.5 ">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/survey_dob"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/dob"
                                android:padding="10dp"
                                android:clickable="true"
                                android:textSize="18sp"
                                android:textColor="@color/black"/>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="3dp"
                            app:cardCornerRadius="5dp"
                            android:layout_margin="3dp"
                            app:cardUseCompatPadding="true"
                            android:layout_weight="0.5">
                            <Spinner
                                android:id="@+id/survey_gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="12dp"
                                android:paddingBottom="12dp"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:popupBackground="@color/bg"/>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/survey_housenumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/housenumber"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/survey_wardnumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/wardnumber"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/mandal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/mandal"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/district"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/district"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/qualification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/qualification"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/occupation"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/yourcardid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true">
                        <Spinner
                            android:id="@+id/spinner_occupation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:popupBackground="@color/bg"/>
                    </androidx.cardview.widget.CardView>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_upload_survey_submit"
                        android:layout_width="120dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/primary"/>
                </LinearLayout>
            </ScrollView>
</LinearLayout>